# cpu-usage-program-using-proc-stat-on-linux-

./: CMakeLists.txt  toDo  toDo.txt
example/: CMakeLists.txt  main.c
include/: CMakeLists.txt  analyzer.h  buffer.h  global.h  global_variables.h  lib.h  logger.h  printer.h  reader.h  watchDog.h
log/: log.txt
src/: CMakeLists.txt  analyzer.c  buffer.c  dasdsa.c  global.c  global_variables.c  lib.c  log.txt  logger.c  main.c  printer.c  reader.c  test.c  watchDog.c
tests/: CMakeLists.txt  test1.c
